pollmessage